# hugifyr

./: .gitignore  LICENSE  Makefile.in  README.md  config.h.in  configure  configure.ac  hugifylibs.py  libexample.c  run_huge.sh
.github/workflows/: test.yml
src/: hugifyr.c  tcollapse.c
tests/: test.py  test1.c
